--- a/src/orders.html
+++ b/src/orders.html
@@ -121,7 +121,7 @@
           </nav>
         </div>
 
-        <div class="flex-1">
+        <div class="flex-1 overflow-x-auto">
           <div
             class="sticky top-0 z-40 bg-white w-full py-6 px-12 flex items-center justify-between mb-8"
           >
