--- a/src/orders.html
+++ b/src/orders.html
@@ -176,11 +176,16 @@
                 class="hs-dropdown [--auto-close:inside] relative inline-flex justify-start [--placement:bottom-right]"
               >
                 <button
-                  class="hs-dropdown-toggle size-12 bg-gray/10 hover:bg-gray/20 transition-colors rounded-full inline-flex items-center justify-center"
+                  class="hs-dropdown-toggle relative size-12 bg-gray/10 hover:bg-gray/20 transition-colors rounded-full inline-flex items-center justify-center"
                 >
                   <svg class="size-6 text-primary">
                     <use href="./assets/images/sprite.svg#bell"></use>
                   </svg>
+
+                  <span
+                    class="absolute top-0 end-0 translate-x-1/3 -translate-y-1/4 size-6 inline-flex items-center justify-center text-white bg-primary rounded-full text-xs"
+                    >19</span
+                  >
                 </button>
 
                 <div
